js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParamWithIntraModuleInliner/main/f.5.kt
internal inline fun foo(lambda: () -> String = { "5" }): String {
    return lambda()
}
